<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/view_selector"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/settings" />

    <item
        android:id="@+id/tickets_button"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:title="@string/my_tickets" />

    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit_to_app"
        android:orderInCategory="3"
        android:title="@string/log_out" />
</menu>